Se integra google iniciación de sesion, falta guardar bien el token

--- a/projects/blog-stephanie/src/index.html
+++ b/projects/blog-stephanie/src/index.html
@@ -5,6 +5,7 @@
   <title>BlogStephanie</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-signin-client_id" content="662313462599-ml46rq28kf5c5kpnv8iqjijjq08ipjen.apps.googleusercontent.com">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800"
@@ -17,5 +18,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <script async defer src="https://apis.google.com/js/api.js"></script>
 </body>
 </html>
